@@ -3,4 +3,5 @@ Maintainer: Steffen Hoffmann <hoff.st@web.de>
 
 tracannouncer-0.12.1 (not yet released) - branch 0.11
  resolved issues
+ * #9206: AttributeError: 'XmppPreferencePanel' has no 'xmpp_format_setting'
  * #10483: Move license to COPYING file
